part_3/todo-application/manifests/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
  namespace: todo-app
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
